--- a/software/src/omaha/templates/components/volume-selector.html
+++ b/software/src/omaha/templates/components/volume-selector.html
@@ -36,13 +36,11 @@
    <paper-card  id="volumeCard" heading="Volume" elevation="4">
       <div id="test" class="card-content">
 
-        <!-- 
         <div id="sliderInvis" class="layout horizontal">
-          <paper-input id="volumeMin" style="margin-left: .5%; width: 30px;" label="Min" placeholder=""></paper-input>
+          <!--<paper-input id="volumeMin" style="margin-left: .5%; width: 30px;" label="Min" placeholder=""></paper-input>-->
           <paper-slider id="volumeInvis" style="visibility: hidden;" pin min="0" max="100"></paper-slider>
-          <paper-input id="volumeMax" style="margin-right: .5%; width: 30px;" label="Max" placeholder="" text-align="center"></paper-input>
+          <!--<paper-input id="volumeMax" style="margin-right: .5%; width: 30px;" label="Max" placeholder="" text-align="center"></paper-input>-->
         </div>
-        -->
 
         <div id="slider" class="layout horizontal">
           <paper-icon-button icon="remove" on-click="decrementVolume"></paper-icon-button>
@@ -106,6 +104,26 @@
     <iron-ajax
           id="thresholdValue"
           url="/system/threshold/"
+          method="PUT"
+          content-type="application/json"
+          handle-as="json"
+          on-response="_logResponse"
+          debounce-duration="300">
+    </iron-ajax>
+
+    <iron-ajax
+          id="thresholdValueZone"
+          url="/system/zone/threshold/"
+          method="PUT"
+          content-type="application/json"
+          handle-as="json"
+          on-response="_logResponse"
+          debounce-duration="300">
+    </iron-ajax>
+
+    <iron-ajax
+          id="updateVolumesZone"
+          url="/system/zone/updateVolumesZone/"
           method="PUT"
           content-type="application/json"
           handle-as="json"
@@ -193,35 +211,77 @@
       },*/
       
       _setVolumeClicked: function() {
-        if(localLevelForVolumeSelector > 0) {
-          this.$.thresholdValue.body = {
-            "speaker": speakerid, 
+        if(zoneFlag == 0) {
+          if(localLevelForVolumeSelector > 0) {
+            this.$.thresholdValue.body = {
+              "speaker": speakerid, 
 
-            "musicMin":   ((!isNaN(parseInt(this.$.musicMin.value)))   ? parseInt(this.$.musicMin.value)   : 0),
-            "musicMax":   ((!isNaN(parseInt(this.$.musicMax.value)))   ? parseInt(this.$.musicMax.value)   : 100),
+              "musicMin":   ((!isNaN(parseInt(this.$.musicMin.value)))   ? parseInt(this.$.musicMin.value)   : 0),
+              "musicMax":   ((!isNaN(parseInt(this.$.musicMax.value)))   ? parseInt(this.$.musicMax.value)   : 100),
 
-            "pagingMin":  ((!isNaN(parseInt(this.$.pagingMin.value)))  ? parseInt(this.$.pagingMin.value)  : 0),
-            "pagingMax":  ((!isNaN(parseInt(this.$.pagingMax.value)))  ? parseInt(this.$.pagingMax.value)  : 100),
+              "pagingMin":  ((!isNaN(parseInt(this.$.pagingMin.value)))  ? parseInt(this.$.pagingMin.value)  : 0),
+              "pagingMax":  ((!isNaN(parseInt(this.$.pagingMax.value)))  ? parseInt(this.$.pagingMax.value)  : 100),
 
-            "maskingMin": ((!isNaN(parseInt(this.$.maskingMin.value))) ? parseInt(this.$.maskingMin.value) : 0),
-            "maskingMax": ((!isNaN(parseInt(this.$.maskingMax.value))) ? parseInt(this.$.maskingMax.value) : 100)
-          };
-          this.$.thresholdValue.generateRequest();
+              "maskingMin": ((!isNaN(parseInt(this.$.maskingMin.value))) ? parseInt(this.$.maskingMin.value) : 0),
+              "maskingMax": ((!isNaN(parseInt(this.$.maskingMax.value))) ? parseInt(this.$.maskingMax.value) : 100)
+            };
+            this.$.thresholdValue.generateRequest();
+          }
+
+          if(localLevelForVolumeSelector < 1 && 
+            (this.$.volume3.value < this.$.musicMin.value || this.$.volume3.value > this.$.musicMax.value || 
+            this.$.volume4.value < this.$.pagingMin.value || this.$.volume4.value > this.$.pagingMax.value || 
+            this.$.volume5.value < this.$.maskingMin.value || this.$.volume5.value > this.$.maskingMax.value)) {
+
+            this.$.invalidVolumeToast.show();
+            return;
+          }
+
+          this.volume = this.internalVolume + " " + this.internalMusicVolume + " " + this.internalPagingVolume + " " + this.internalSoundMaskingVolume;
+          //this.musicVolume = this.internalVolume2;
+          this.$.toast.show();
+          console.log("_setVolumeClicked");
+        } else {
+          if(localLevelForVolumeSelector > 0) {
+            this.$.thresholdValueZone.body = {
+              "zone": speaker.zone.zoneID, 
+
+              "musicMin":   ((!isNaN(parseInt(this.$.musicMin.value)))   ? parseInt(this.$.musicMin.value)   : 0),
+              "musicMax":   ((!isNaN(parseInt(this.$.musicMax.value)))   ? parseInt(this.$.musicMax.value)   : 100),
+
+              "pagingMin":  ((!isNaN(parseInt(this.$.pagingMin.value)))  ? parseInt(this.$.pagingMin.value)  : 0),
+              "pagingMax":  ((!isNaN(parseInt(this.$.pagingMax.value)))  ? parseInt(this.$.pagingMax.value)  : 100),
+
+              "maskingMin": ((!isNaN(parseInt(this.$.maskingMin.value))) ? parseInt(this.$.maskingMin.value) : 0),
+              "maskingMax": ((!isNaN(parseInt(this.$.maskingMax.value))) ? parseInt(this.$.maskingMax.value) : 100)
+            };
+            console.log(this.$.thresholdValueZone.body);
+            this.$.thresholdValueZone.generateRequest();
+          }
+
+          if(localLevelForVolumeSelector < 1 && 
+            (this.$.volume3.value < this.$.musicMin.value || this.$.volume3.value > this.$.musicMax.value || 
+            this.$.volume4.value < this.$.pagingMin.value || this.$.volume4.value > this.$.pagingMax.value || 
+            this.$.volume5.value < this.$.maskingMin.value || this.$.volume5.value > this.$.maskingMax.value)) {
+
+            this.$.invalidVolumeToast.show();
+            return;
+          } else {
+            this.$.updateVolumesZone.body = {
+              "zone": speaker.zone.zoneID,
+              "volume": this.$.volume2.value,
+              "music": this.$.volume3.value,
+              "paging": this.$.volume4.value,
+              "masking": this.$.volume5.value
+            };
+            this.$.updateVolumesZone.generateRequest();
+          }
+
+          //this.volume = this.internalVolume + " " + this.internalMusicVolume + " " + this.internalPagingVolume + " " + this.internalSoundMaskingVolume;
+          //this.musicVolume = this.internalVolume2;
+          this.$.toast.show();
+          console.log("_setVolumeClicked");
         }
-
-        if(localLevelForVolumeSelector < 1 && 
-          (this.$.volume3.value < this.$.musicMin.value || this.$.volume3.value > this.$.musicMax.value || 
-          this.$.volume4.value < this.$.pagingMin.value || this.$.volume4.value > this.$.pagingMax.value || 
-          this.$.volume5.value < this.$.maskingMin.value || this.$.volume5.value > this.$.maskingMax.value)) {
-
-          this.$.invalidVolumeToast.show();
-          return;
-        }
-
-        this.volume = this.internalVolume + " " + this.internalMusicVolume + " " + this.internalPagingVolume + " " + this.internalSoundMaskingVolume;
-        //this.musicVolume = this.internalVolume2;
-        this.$.toast.show();
-        console.log("_setVolumeClicked");
       },
 
 
@@ -391,7 +451,6 @@
             //Polymer.dom(this.$.test).removeChild(this.$.sliderInvis3);
             //Polymer.dom(this.$.test).removeChild(this.$.sliderInvis4);
 
-
             this.$.musicMin.disabled = true;
             this.$.musicMax.disabled = true;
 
@@ -402,6 +461,7 @@
             this.$.maskingMax.disabled = true;
 
             this.$.volume2.disabled = true;
+
             //Polymer.dom(volumeCard).removeChild(averagingButton);
             //Polymer.dom(volumeCard).removeChild(averagingButton);
             //Polymer.dom(volumeCard).removeChild(averagingButton);
